Updated to Java 8 coding standards.